--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+body {
+    background-color: #f8f8f8;
+}
+
+.title-lib {
+    background-color: #f1f1f1;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+   
+}
+
+.book {
+    display: block;
+    text-align: center;
+    width: 80%;
+    margin-left: 180px;
+}
+
+.book>.title {
+    text-align: left;
+    font-weight: bold;
+    margin-bottom: -20px;
+}
+
+.book>.author {
+    text-align: left;
+    color: darkgray;
+    font-weight: bold;
+    margin-bottom: -17px;
+}
+
+.book>.price {
+    background-color: #3ecc77;
+    height:26px ;
+    text-align: center;
+    padding-top: 10px;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
